[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlpiston"
version = "0.1.0"
description = "A low-level SQL library that builds parameterized SQL queries through Python operator overloading"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "MuliMuri" },
]
keywords = ["sql", "query-builder", "orm", "mysql", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "coverage>=7",
    "flake8>=7",
    "mypy>=1",
]

[tool.setuptools.packages.find]
where = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]

[tool.coverage.run]
source = ["sqlpiston"]
parallel = true

[tool.coverage.report]
fail_under = 100
show_missing = true

